# OS_FinalProject

./: ActiveObject.cpp  ActiveObject.hpp  CMakeLists.txt  Graph.cpp  Graph.hpp  LICENSE  LeaderFollowers.cpp  LeaderFollowers.hpp  Logger.cpp  Logger.hpp  MSTFactory.cpp  MSTFactory.hpp  MST_Tests.cpp  Makefile  Pipeline.cpp  Pipeline.hpp  README.md  Server.hpp  Server_LF.hpp  Server_PL.hpp  main.cpp
